tests/ui/suggestions/suggest-assoc-fn-call-with-turbofish-through-deref.stderr
error[E0599]: no method named `hello` found for struct `RefMut<'_, HasAssocMethod>` in the current scope
  --> $DIR/suggest-assoc-fn-call-with-turbofish-through-deref.rs:11:11
   |
LL |     state.hello();
   |     ------^^^^^--
   |     |     |
   |     |     this is an associated function, not a method
   |     help: use associated function syntax instead: `HasAssocMethod::hello()`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: the candidate is defined in an impl for the type `HasAssocMethod`
  --> $DIR/suggest-assoc-fn-call-with-turbofish-through-deref.rs:6:5
   |
LL |     fn hello() {}
   |     ^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
